==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/STM32L4xx/WWD/wwd_SDIO.c <==
#include <string.h> /* For memcpy */
#include "wwd_platform_common.h"
#include "wwd_bus_protocol.h"
#include "wwd_assert.h"
#include "platform/wwd_platform_interface.h"
#include "platform/wwd_sdio_interface.h"
#include "platform/wwd_bus_interface.h"
#include "RTOS/wwd_rtos_interface.h"
#include "network/wwd_network_constants.h"
#include "platform_cmsis.h"
#include "platform_peripheral.h"
#include "platform_config.h"
#include "wwd_rtos_isr.h"
#define COMMAND_FINISHED_CMD52_TIMEOUT_LOOPS (100000)
#define COMMAND_FINISHED_CMD53_TIMEOUT_LOOPS (100000)
#define SDIO_TX_RX_COMPLETE_TIMEOUT_LOOPS    (100000)
#define SDIO_DMA_TIMEOUT_LOOPS               (1000000)
#define MAX_TIMEOUTS                         (30)
#define SDIO_ERROR_MASK                      (SDMMC_STA_CCRCFAIL | SDMMC_STA_DCRCFAIL | SDMMC_STA_CTIMEOUT | SDMMC_STA_DTIMEOUT | SDMMC_STA_TXUNDERR | SDMMC_STA_RXOVERR)
#define BUS_LEVEL_MAX_RETRIES                (5)
#define SDIO_ENUMERATION_TIMEOUT_MS          (500)

wwd_result_t host_platform_bus_init( void )
{

    SDMMC_InitTypeDef sdio_init_structure;
    wwd_result_t result;
    uint8_t a;
    HAL_StatusTypeDef HAL_return;
    uint32_t channelindex;

    platform_mcu_powersave_disable( );

    /* Reset SDIO Block */
    SDMMC_PowerState_OFF( SDMMC1 );
    __HAL_RCC_SDMMC1_FORCE_RESET( );
    __HAL_RCC_SDMMC1_RELEASE_RESET( );

    result = host_rtos_init_semaphore( &sdio_transfer_finished_semaphore );
    if ( result != WWD_SUCCESS )
    {
        return result;
    }

    /* Clear all SDIO interrupts */
    SDMMC1->ICR = (uint32_t) 0xffffffff;

    HAL_NVIC_EnableIRQ( (IRQn_Type) SDMMC1_IRQn );
    HAL_NVIC_EnableIRQ( (IRQn_Type ) DMA2_Channel4_IRQn );

    /* Setup GPIO pins for SDIO data & clock */
    for ( a = WWD_PIN_SDIO_CLK; a < WWD_PIN_SDIO_MAX; a++ )
    {
        if ( PLATFORM_SUCCESS != platform_gpio_set_alternate_function( wifi_sdio_pins[ a ].port, wifi_sdio_pins[ a ].pin_number, GPIO_MODE_AF_PP, GPIO_PULLUP, GPIO_AF12_SDMMC1 ) )
        {
            return WICED_ERROR;
        }
    }

    /* Enable the SDIO Clock */
    __HAL_RCC_SDMMC1_CLK_ENABLE( );

    /* Enable DMA Clock */
    __HAL_RCC_DMA2_CLK_ENABLE( );

    /* SDMMC Initialization Frequency (400KHz max) for IP CLK 200MHz*/
    sdio_init_structure.ClockDiv            = SDMMC_INIT_CLK_DIV; /* Assumption - SDMMC input clock is at 48Mhz */
    sdio_init_structure.ClockEdge           = SDMMC_CLOCK_EDGE_RISING;
    sdio_init_structure.ClockPowerSave      = SDMMC_CLOCK_POWER_SAVE_DISABLE;
    sdio_init_structure.BusWide             = SDMMC_BUS_WIDE_1B;
    sdio_init_structure.ClockBypass         = SDMMC_CLOCK_BYPASS_DISABLE;
    sdio_init_structure.HardwareFlowControl = SDMMC_HARDWARE_FLOW_CONTROL_DISABLE;
    HAL_return                              = SDMMC_Init( SDMMC1, sdio_init_structure );
    HAL_return                             |= SDMMC_PowerState_ON( SDMMC1 );
    HAL_return                             |= SDMMC_SetSDMMCReadWaitMode( SDMMC1, SDMMC_READ_WAIT_MODE_CLK );
    __SDMMC_ENABLE( SDMMC1 );

    if ( HAL_return != HAL_OK )
    {
        return WICED_ERROR;
    }

    channelindex = ( ( (uint32_t) DMA2_Channel4 - (uint32_t) DMA2_Channel1 ) / ( (uint32_t) DMA2_Channel2 - (uint32_t) DMA2_Channel1 ) ) << 2;
    /* Reset request selection for DMA2 Channelx */
    DMA2_CSELR->CSELR &= ~( DMA_CSELR_C1S << channelindex );

    /* Configure request selection for DMA2 Channelx */
    DMA2_CSELR->CSELR |= ( uint32_t )( DMA_REQUEST_7 << channelindex );

    platform_mcu_powersave_enable( );
    return WWD_SUCCESS;
}

wwd_result_t host_platform_bus_deinit( void )
{
    wwd_result_t result;
    uint32_t     a;

    result = host_rtos_deinit_semaphore( &sdio_transfer_finished_semaphore );

    platform_mcu_powersave_disable();

    /* Disable SPI and SPI DMA */
    sdio_disable_bus_irq( );

    SDMMC_PowerState_OFF( SDMMC1 );
    __HAL_RCC_SDMMC1_CLK_DISABLE( );
    __HAL_RCC_DMA2_CLK_DISABLE( );

    for ( a = 0; a < WWD_PIN_SDIO_MAX; a++ )
    {
        platform_gpio_deinit( &wifi_sdio_pins[ a ] );
    }

    /* Turn off SDIO IRQ */
    HAL_NVIC_DisableIRQ( (IRQn_Type) SDMMC1_IRQn );
    HAL_NVIC_DisableIRQ( (IRQn_Type ) DMA2_Channel4_IRQn );

    platform_mcu_powersave_enable( );

    return result;
}

wwd_result_t host_platform_sdio_transfer( wwd_bus_transfer_direction_t direction, sdio_command_t command, sdio_transfer_mode_t mode, sdio_block_size_t block_size, uint32_t argument, /*@null@*/ uint32_t* data, uint16_t data_size, sdio_response_needed_t response_expected, /*@out@*/ /*@null@*/ uint32_t* response )
{
    uint32_t loop_count = 0;
    wwd_result_t result = WWD_UNSUPPORTED;
    uint16_t attempts = 0;

    wiced_assert( "Bad args", !((command == SDIO_CMD_53) && (data == NULL)) );

    if ( response != NULL )
    {
        *response = 0;
    }

    DMA2_Channel4->CCR = 0;
    platform_mcu_powersave_disable( );

    restart: SDMMC1->ICR = (uint32_t) 0xFFFFFFFF;
    sdio_transfer_failed = WICED_FALSE;
    ++attempts;

    /* Check if we've tried too many times */
    if ( attempts >= (uint16_t) BUS_LEVEL_MAX_RETRIES )
    {
        result = WWD_SDIO_RETRIES_EXCEEDED;
        goto exit;
    }

    /* Prepare the data transfer register */
     current_command = command;
     if ( command == SDIO_CMD_53 )
     {
         sdio_enable_bus_irq( );

         /* Dodgy STM32 hack to set the CMD53 byte mode size to be the same as the block size */
         if ( mode == SDIO_BYTE_MODE )
         {
             block_size = find_optimal_block_size( data_size );
             if ( block_size < SDIO_512B_BLOCK )
             {
                 argument = ( argument & (uint32_t) ( ~0x1FF ) ) | block_size;
             }
             else
             {
                 argument = ( argument & (uint32_t) ( ~0x1FF ) );
             }
         }

         /* Prepare the SDIO for a data transfer */
         current_transfer_direction = direction;
         sdio_prepare_data_transfer( direction, block_size, (uint8_t*) data, data_size );

         /* Send the command */
         SDMMC1->ARG = argument;
         SDMMC1->CMD = (uint32_t) ( command | SDMMC_RESPONSE_SHORT | SDMMC_WAIT_NO | SDMMC_CPSM_ENABLE );

         /* Wait for the whole transfer to complete */
         result = host_rtos_get_semaphore( &sdio_transfer_finished_semaphore, (uint32_t) 50, WICED_TRUE );
         if ( result != WWD_SUCCESS )
         {
             goto exit;
         }

         if ( sdio_transfer_failed == WICED_TRUE )
         {
             goto restart;
         }

         /* Check if there were any SDIO errors */
         if ( ( SDMMC1->STA & ( SDMMC_STA_DTIMEOUT | SDMMC_STA_CTIMEOUT ) ) != 0 )
         {
             goto restart;
         }
         else if ( ( ( SDMMC1->STA & ( SDMMC_STA_CCRCFAIL | SDMMC_STA_DCRCFAIL | SDMMC_STA_TXUNDERR | SDMMC_STA_RXOVERR ) ) != 0 ) )
         {
             wiced_assert( "SDIO communication failure", 0 );
             goto restart;
         }

         /* Wait till complete */
         loop_count = (uint32_t) SDIO_TX_RX_COMPLETE_TIMEOUT_LOOPS;
         do
         {
             loop_count--;
             if ( loop_count == 0 || ( ( SDMMC1->STA & SDIO_ERROR_MASK ) != 0 ) )
             {

                 goto restart;
             }
         } while ( ( SDMMC1->STA & ( SDMMC_STA_TXACT | SDMMC_STA_RXACT ) ) != 0 );

         if ( direction == BUS_READ )
         {
             memcpy( user_data, dma_data_source, (size_t) user_data_size );
         }

     }
     /* ALl SDIO CMD other than CMD53 */
     else
     {
         uint32_t temp_sta;

         /* Send the command */
         SDMMC1->ARG = argument;
         SDMMC1->CMD = (uint32_t) ( command | SDMMC_RESPONSE_SHORT | SDMMC_WAIT_NO | SDMMC_CPSM_ENABLE );

         loop_count = (uint32_t) COMMAND_FINISHED_CMD52_TIMEOUT_LOOPS;
         do
         {
             temp_sta = SDMMC1->STA;
             loop_count--;
             if ( loop_count == 0 || ( ( response_expected == RESPONSE_NEEDED ) && ( ( temp_sta & SDIO_ERROR_MASK ) != 0 ) ) )
             {
                 goto restart;
             }
         } while ( ( temp_sta & ( SDMMC_STA_CMDACT ) ) != 0 );
     }

     if ( response != NULL )
     {
         *response = SDMMC1->RESP1;
     }
     result = WWD_SUCCESS;
     SDMMC1->CMD = 0;

     exit: platform_mcu_powersave_enable( );
     return result;
}

wwd_result_t host_platform_enable_high_speed_sdio( void )
{
    SDMMC_InitTypeDef sdio_init_structure = { 0 };

    /* bus_clock = input_clock / ( 2 * Clockdiv) */
    sdio_init_structure.ClockDiv       = SDMMC_TRANSFER_CLK_DIV;
    sdio_init_structure.ClockEdge      = SDMMC_CLOCK_EDGE_RISING;
    sdio_init_structure.ClockPowerSave = SDMMC_CLOCK_POWER_SAVE_DISABLE;
    sdio_init_structure.ClockBypass    = SDMMC_CLOCK_BYPASS_DISABLE;
#ifndef SDIO_1_BIT
    sdio_init_structure.BusWide        = SDMMC_BUS_WIDE_4B;
#else
    sdio_init_structure.BusWide        = SDMMC_BUS_WIDE_1B;
#endif
    sdio_init_structure.HardwareFlowControl = SDMMC_HARDWARE_FLOW_CONTROL_DISABLE;

    SDMMC_Init( SDMMC1, sdio_init_structure );
    return WWD_SUCCESS;
}
